package org.example.game;

/**
 * Состояния игры.
 */
public enum GameState {
    PLAY,
    MAIN_MENU,
    PAUSE,
    LOSE,
    WIN,
    EXIT
}
