package org.example.map;

/**
 * Енам типов наших клеток.
 */
public enum TypeCell {
    BODY,
    STONE,
    APPLE,
    CELL
}
